CMS7-8896: fix size and vertical alignment of carets in the document tree

--- a/cms/api/src/main/styling/less/_tree.less
+++ b/cms/api/src/main/styling/less/_tree.less
@@ -138,9 +138,8 @@
     .junction-last,
     .corner {
       .hi {
-        position: relative;
-        padding-top: 3px;
         color: @tree-junction-color;
+        vertical-align: middle;
       }
     }
   }
